# headball

./: README.md  geometry.py  main.py  opisanie.aux  opisanie.tex  params.py  server  server.c  serverUtil.c  serverUtil.h
server/: CMakeLists.txt  main.c
server/inc/: server.h
server/src/: CMakeLists.txt  server.c
test/: client  client.c
